k8s/notus.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notus
  labels:
    app: notus
spec:
  selector:
    matchLabels:
      app: notus
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: notus
    spec:
      containers:
      - name: notus
        image: ${IMAGE_NAME_COMMIT}
        readinessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 5
---
kind: Service
apiVersion: v1
metadata:
  name: notus
spec:
  selector:
    app: notus
  type: NodePort
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: notus
spec:
  tls:
    - secretName: notus-network-tls
  rules:
  - host: api.notus.network
    http:
      paths:
      - path: /
        backend:
          serviceName: notus
          servicePort: 80
